--- a/debug.html
+++ b/debug.html
@@ -2,8 +2,8 @@
 <html>
 	<head>
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Enyo Bootplate App</title>
-		<link rel="shortcut icon" href="assets/favicon.ico"/>
+		<title>Con-Troll</title>
+		<link rel="shortcut icon" href="assets/favicon.png"/>
 		<!-- -->
 		<meta http-equiv="Content-Type" content="text/html; charset=utf8"/>
 		<meta name="apple-mobile-web-app-capable" content="yes"/>
